<resources>
    <string name="app_name">Harvard Art Museum</string>
    <string name="artist_name_placeholder">Vincent Van Gogh</string>
    <string name="artist_birthplace_placeholder">Zundert, Netherlands</string>
    <string name="artist_date_placeholder">1853 – 1890</string>
    <string name="artwork_title_placeholder">Sunflowers</string>
    <string name="artwork_type_placeholder">Paintings</string>
    <string name="columns_count">columns_count</string>
    <string name="rows_count">rows_count</string>
    <string name="default_columns_count">2</string>
    <string name="default_rows_count">10</string>
    <string name="paintings_textView">Paintings</string>
</resources>