<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
            android:id="@+id/fullscreen_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/artwork_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/artwork_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artist_name_placeholder"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/artwork_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artwork_title_placeholder"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/artwork_classification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artwork_type_placeholder"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>