<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardBackgroundColor="@color/black"
    app:cardCornerRadius="16dp"
    app:strokeColor="@color/white"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/artist_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist_name_placeholder"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/artist_birthplace_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artist_birthplace_placeholder"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/artist_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/artist_date_placeholder"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/artist_deathplace_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artist_birthplace_placeholder"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>